# Parallel-Mesh-Generator

./: .gitignore  CMakeLists.txt
include/: MySTL.h  common.h  cuda_meshgen.cuh  cuda_pip.cuh  grainmesh.h  helper_math.cuh  iotetgen.h  meshcut.h  meshsmooth.h  mymesh.h
src/: MySTL.cpp  common.cpp  grainmesh.cpp  iotetgen.cpp  kernel.cu  meshcut.cpp  meshsmooth.cpp  mymesh.cpp
